--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             <img class="gallery__slide-img" src="./resources/Project_forest_lanscape.jpg" alt="изображение проекта" >                        
                         <div class="gallery__slide-title-wrapper">
                             <div class="container">
-                                <h3 class="gallery__slide-title">Проект &#160Двухкомнтаной <br> квартиры в ЖК Лесной Пейзаж  
+                                <h3 class="gallery__slide-title">Проект &#160Двухкомнатной <br> квартиры в ЖК Лесной Пейзаж  
                                 </h3>
                             </div>
                         </div>
@@ -235,7 +235,7 @@
                         <a class="contact-number__arrow" href="tel:+79358954535">+7 935&#160 895-45-35</a>
                     </p>
                     <p class="contact-mail">
-                        <a class="contact-mail__arrow" href="mailto:">hello@mail.com</a>
+                        <a class="contact-mail__arrow" href="mailto:https://t.me/AndrievskiyEK">AndrievskiyEK</a>
                     </p>
                 </div>       
             </section>    
