--- a/index.html
+++ b/index.html
@@ -28,20 +28,25 @@
         </div>    
     </header> -->
     <main class="main">
-        <div class="container">
-            <section class="interior">
+        <section class="interior">
+            <div class="container">
                 <h1 class="interior-header">Современные и стильные интерьеры для комфортной жизни</h1>
                 <div class="interior-wrapper">        
                     <h3 class="interior-text">Мы - команда квалифицированных дизайнеров и архитекторов, занимающихся разработкой и реализацией дизайн-проектов</h3>        
                 </div>
-            </section>                     
-            <section class="about-us">
+            </div>
+        </section>                     
+        <section class="about-us">
+            <div class="container">
                 <h2 id="about" class="about-us__header">О НАС</h2>
                 <p class="about-us__description">Студия основана в 2011 году. Полностью отдаемся проектированию и реализации интерьеров. К нам обращаются за уютом, индивидуальными решениями и практичностью. Находим конструктивные решения для каждого интерьера, вплоть до каждой детали — нацелены на результат.
                 </p>
                 <a class="about-us__link" href="#service">Посмотреть услуги</a>
-            </section>                       
-            <section class="projects-list">
+                </div>  
+            </div>                      
+        </section>                       
+        <section class="projects-list">
+            <div class="container">
                 <h2 id="project" class="projects-list__header">ПРОЕКТЫ</h2> 
                 <ul>
                     <li class="projects-list__item">
@@ -75,9 +80,9 @@
                         <a class="projects-list__item-ref" href="#">Подробнее →</a>
                     </li>
                 </ul>       
-                <a href="#" class="btn">Смотреть все проекты</a>   
-            </section> 
-        </div>
+                <a href="#" class="btn">Смотреть все проекты</a>  
+            </div>             
+        </section> 
         <section class="services">
             <div class="services-inner">
                 <h2 id="service" class="services__header">УСЛУГИ</h2>
@@ -135,47 +140,47 @@
                 </div>
                 <button class="services-btn">Заказать услугу</button>
             </div>
-        </section>
-        <div class="container">
-            <section class="reviews">
-                <h2 class="reviews__header">ОТЗЫВЫ</h2>
-                <div class="reviews__row-card">
-                    <div class="reviews__collum-card">  
-                        <div class="reviews-card">
-                            <h3 class="reviews-card__user">Ксения, проект 65 кв.м.</h3>
-                            <p class="reviews-card__description">
-                                Хочу искренне поблагодарить Вас за работу, проделанную на высоком уровне! Нам с мужем было очень приятно с Вами работать! Спасибо за Ваше умение правильно слышать пожелания своих клиентов и выполнять работу, которая превосходит все ожидания! Мы даже не надеялись, что на 34 кв.м. кто-то сможет нам грамотно разместить все, что мы хотим и даже больше!
-                            </p>
-                            <p class="reviews-card__description">
-                                Вам удалось это просто превосходно! Нам лишь осталось воплотить красоту, которую Вы нам создали в жизнь и поделиться с Вами результатом!                                
-                            </p>
-                        </div>                      
+        </section>        
+        <section class="reviews">
+                <div class="container">
+                    <h2 class="reviews__header">ОТЗЫВЫ</h2>
+                    <div class="reviews__row-card">
+                        <div class="reviews__collum-card">  
+                            <div class="reviews-card">
+                                <h3 class="reviews-card__user">Ксения, проект 65 кв.м.</h3>
+                                <p class="reviews-card__description">
+                                    Хочу искренне поблагодарить Вас за работу, проделанную на высоком уровне! Нам с мужем было очень приятно с Вами работать! Спасибо за Ваше умение правильно слышать пожелания своих клиентов и выполнять работу, которая превосходит все ожидания! Мы даже не надеялись, что на 34 кв.м. кто-то сможет нам грамотно разместить все, что мы хотим и даже больше!
+                                </p>
+                                <p class="reviews-card__description">
+                                    Вам удалось это просто превосходно! Нам лишь осталось воплотить красоту, которую Вы нам создали в жизнь и поделиться с Вами результатом!                                
+                                </p>
+                            </div>                      
+                        </div>
+                        <div class="reviews__collum-card">  
+                            <div class="reviews-card">
+                                <h3 class="reviews-card__user">Регина, проект 89 кв.м.</h3>
+                                <p class="reviews-card__description">
+                                    Спасибо большое за такой классный проект! Все стильно, круто, продумано! Очень приятно было с вами работать! Спасибо, что терпели наши «хочу это, хочу то» в поисках идеального для нас ремонта. Здорово, что мы нашли такого основательного, ответственного и внимательного к деталям дизайнера!
+                                </p>
+                                <p class="reviews-card__description">
+                                    Хочется скорее реализовать проект и наслаждаться современной, функциональной и красивой квартирой! Будем рекомендовать Вас всем друзьям и знакомым!
+                                </p>                        
+                            </div>                      
+                        </div>
+                        <div class="reviews__collum-card">  
+                            <div class="reviews-card">
+                                <h3 class="reviews-card__user">Яна, проект 120 кв.м.</h3>
+                                <p class="reviews-card__description">
+                                    Хотелось бы сказать большое спасибо за проделанную работу! В задачу Марины входила разработка дизайн-проекта в минимальные сроки, и мне, конечно, не хотелось при этом потерять качество выполнения работы. Но волнения были напрасны: все вопросы решались оперативно, всегда предлагалось несколько вариантов решения, а также предоставлялись комментарии, какой способ решения будет более подходящим.
+                                </p>
+                                <p class="reviews-card__description">
+                                    В итоге проект был сдан в оговоренный срок, и мне просто не терпится приступить к его реализации! Проект получился очень стильным и современным! Буду рекомендовать Вас тем, кому еще предстоит это непростое дело - ремонт!
+                                </p>                        
+                            </div>                      
+                        </div>
                     </div>
-                    <div class="reviews__collum-card">  
-                        <div class="reviews-card">
-                            <h3 class="reviews-card__user">Регина, проект 89 кв.м.</h3>
-                            <p class="reviews-card__description">
-                                Спасибо большое за такой классный проект! Все стильно, круто, продумано! Очень приятно было с вами работать! Спасибо, что терпели наши «хочу это, хочу то» в поисках идеального для нас ремонта. Здорово, что мы нашли такого основательного, ответственного и внимательного к деталям дизайнера!
-                            </p>
-                            <p class="reviews-card__description">
-                                Хочется скорее реализовать проект и наслаждаться современной, функциональной и красивой квартирой! Будем рекомендовать Вас всем друзьям и знакомым!
-                            </p>                        
-                        </div>                      
-                    </div>
-                    <div class="reviews__collum-card">  
-                        <div class="reviews-card">
-                            <h3 class="reviews-card__user">Яна, проект 120 кв.м.</h3>
-                            <p class="reviews-card__description">
-                                Хотелось бы сказать большое спасибо за проделанную работу! В задачу Марины входила разработка дизайн-проекта в минимальные сроки, и мне, конечно, не хотелось при этом потерять качество выполнения работы. Но волнения были напрасны: все вопросы решались оперативно, всегда предлагалось несколько вариантов решения, а также предоставлялись комментарии, какой способ решения будет более подходящим.
-                            </p>
-                            <p class="reviews-card__description">
-                                В итоге проект был сдан в оговоренный срок, и мне просто не терпится приступить к его реализации! Проект получился очень стильным и современным! Буду рекомендовать Вас тем, кому еще предстоит это непростое дело - ремонт!
-                            </p>                        
-                        </div>                      
-                    </div>
-                </div>             
-            </section>  
-        </div>
+                </div>                             
+        </section>        
         <section class="gallery-project">
             <div class="gallery">
                 <div class="container">
@@ -227,19 +232,19 @@
                 </div>                                              
             </div>            
         </section>
-       <div class="container">
-            <section class="contacts">
+        <section class="contacts">
+            <div class="container">
                 <h2 id="contacts" class="contact__item">КОНТАКТЫ</h2>
                 <div class="contact-wrapper">
-                    <p class="contact-number">
+                    <div class="contact-number">
                         <a class="contact-number__arrow" href="tel:+79358954535">+7 935&#160 895-45-35</a>
-                    </p>
-                    <p class="contact-mail">
-                        <a class="contact-mail__arrow" href="mailto:https://t.me/AndrievskiyEK">AndrievskiyEK</a>
-                    </p>
-                </div>       
-            </section>    
-        </div>        
+                    </div>
+                    <div class="contact-mail">
+                        <a class="contact-mail__arrow" href="mailto:hello@mail.com">hello@mail.com</a>
+                    </div>
+                </div>   
+            </div>                    
+        </section>  
     </main>
     <footer class="footer">
         <div class="container">            
