--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <a class="burger__contact-number__arrow" href="tel:+79358954535">+7 935&#160 895-45-35</a>
                         </div>
                         <div class="burger__contact-mail">
-                            <a class="burger__contact-mail__arrow" href="mailto:hello@mail.com">hello@mail.com</a>
+                            <a class="burger__contact-mail__arrow" href="https://t.me/AndrievskiyEK">AndrievskiyEK</a>
                         </div>
                     </div>
                 </div>        
@@ -299,7 +299,7 @@
                         <a class="contact-number__arrow" href="tel:+79358954535">+7 935&#160 895-45-35</a>
                     </div>
                     <div class="contact-mail">
-                        <a class="contact-mail__arrow" href="mailto:hello@mail.com">hello@mail.com</a>
+                        <a class="contact-mail__arrow" href="https://t.me/AndrievskiyEK">AndrievskiyEK</a>
                     </div>
                 </div>   
             </div>                    
